scroll position sometimes is not saved inside display: contents
Categories
(Core :: Layout: Scrolling and Overflow, defect, P3)
Tracking
()
Tracking | Status | |
---|---|---|
firefox67 | --- | fixed |
People
(Reporter: wcpan, Assigned: wcpan)
References
Details
Attachments
(4 files)
Assignee | ||
Comment 1•6 years ago
|
||
Updated•6 years ago
|
Comment 2•6 years ago
|
||
Assignee | ||
Comment 3•6 years ago
|
||
Assignee | ||
Comment 4•6 years ago
|
||
Assignee | ||
Comment 5•6 years ago
|
||
Comment 6•6 years ago
|
||
Assignee | ||
Comment 7•6 years ago
|
||
Updated•6 years ago
|
Assignee | ||
Comment 8•6 years ago
|
||
Assignee | ||
Comment 9•6 years ago
|
||
Since :mats is blocking review now, and I'm not sure when will he be available again, do we have other victim to review this bug?
Thanks.
Comment 10•6 years ago
|
||
(In reply to Wei-Cheng Pan [:wcpan] [:wcp] [:legnaleurc] (left Mozilla) from comment #9)
Since :mats is blocking review now, and I'm not sure when will he be available again, do we have other victim to review this bug?
Thanks.
I suspect he just missed the Phabricator review request.
Comment 11•6 years ago
|
||
(In reply to Emilio Cobos Álvarez (:emilio) from comment #10)
(In reply to Wei-Cheng Pan [:wcpan] [:wcp] [:legnaleurc] (left Mozilla) from comment #9)
Since :mats is blocking review now, and I'm not sure when will he be available again, do we have other victim to review this bug?
Thanks.I suspect he just missed the Phabricator review request.
Hmm, I have no clue why it says I'm blocking review requests.
My bugzilla account certainly isn't blocking requests.
Does Phabricator also have setting for that? I couldn't find one...
Updated•6 years ago
|
Comment 12•6 years ago
|
||
Assignee | ||
Comment 13•6 years ago
|
||
Thanks so much for your help! :)
Comment 14•6 years ago
|
||
(In reply to Mats Palmgren (:mats) from comment #11)
Hmm, I have no clue why it says I'm blocking review requests.
My bugzilla account certainly isn't blocking requests.
Does Phabricator also have setting for that? I couldn't find one...
In Phabricator there are two kinds of reviewers, blocking and non-blocking. Blocking reviewers need to approve the patch for it to land, non-blocking reviewers don't, as long as at least one of them have approved the patch.
So tagging you and Daniel both as a blocking reviewer, for example, would mean that I need review from both, tagging you both as a non-blocking reviewers means that I need review from at least one of you.
Updated•6 years ago
|
Comment 15•6 years ago
|
||
(In reply to Wei-Cheng Pan [:wcpan] [:wcp] [:legnaleurc] (left Mozilla) from comment #13)
Thanks so much for your help! :)
NP, thank you for fixing it!
Comment 16•6 years ago
|
||
(In reply to Emilio Cobos Álvarez (:emilio) from comment #14)
In Phabricator there are two kinds of reviewers, blocking and non-blocking. Blocking reviewers need to approve the patch for it to land, non-blocking reviewers don't, as long as at least one of them have approved the patch.
Ah, Wei-Cheng's comment makes sense now. Thanks.
Comment 17•6 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/46591113989e
https://hg.mozilla.org/mozilla-central/rev/47cafac7c288
Description
•