Bug 1515822 - Capture frame state in nsCSSFrameConstructor::ContentRemoved. r=emilio,mats

Move CaptureStateForFramesOf into ContentRemoved, so we can traverse frames
which were under display: contents as well.

Differential Revision: https://phabricator.services.mozilla.com/D15319

--HG--
extra : moz-landing-system : lando